# template_cpp

./: CMakeLists.txt  README.md  main.cpp
exercises/: test.hpp
exercises/chapter2/: 2-0.hpp  2-1.hpp  2-2.hpp  2-3_4.hpp  chapter2.hpp
exercises/chapter3/: 3-1_2.hpp  3-3_4.hpp  3-6.hpp  3-7.hpp  3_0.hpp  3_1_2.hpp  3_3_4.hpp  chapter3.hpp  dimension.hpp  has_embedded_type.hpp  lambda.hpp
exercises/chapter4/: 4-0_1.hpp
